--- a/app/src/main/res/layout/assessment_recycler.xml
+++ b/app/src/main/res/layout/assessment_recycler.xml
@@ -3,8 +3,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@color/transparent_black_hex_1"
-        android:layout_margin="5dp"
+        android:background="@color/assessment_bg"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:elevation="2dp">
 
 
@@ -13,13 +16,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/professionalTax"
             android:padding="5dp"
-            android:layout_marginBottom="@dimen/margin_left_20dp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:visibility="gone"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -56,7 +59,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -95,7 +98,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -130,13 +133,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/propertyTax"
             android:padding="5dp"
-            android:layout_marginBottom="@dimen/margin_left_20dp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:visibility="gone"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -176,7 +179,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -217,7 +220,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -258,7 +261,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -298,7 +301,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -340,13 +343,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/tradeLicenceTax"
             android:padding="5dp"
-            android:layout_marginBottom="@dimen/margin_left_20dp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:visibility="gone"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -385,7 +388,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -425,7 +428,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -464,7 +467,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -503,7 +506,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -542,7 +545,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -581,7 +584,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -623,13 +626,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/waterTax"
             android:padding="5dp"
-            android:layout_marginBottom="@dimen/margin_left_20dp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:visibility="gone"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -668,7 +671,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -707,7 +710,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -742,13 +744,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/non_tax"
             android:padding="5dp"
-            android:layout_marginBottom="@dimen/margin_left_20dp"
+            android:layout_marginBottom="@dimen/_5sdp"
             android:visibility="visible"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -786,7 +788,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -824,7 +826,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -863,7 +865,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -903,7 +905,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -943,7 +945,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
@@ -983,7 +985,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/cornered_rect_lite_bg"
