--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -197,6 +197,7 @@
                             android:visibility="visible">
 
                             <TextView
+
                                 android:layout_marginLeft="10dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -205,12 +206,12 @@
                                 android:id="@+id/selectedTaxName"
                                 android:textColor="@color/grey2"
                                 android:textSize="@dimen/_13sdp"
-                                android:visibility="visible"
+                                android:visibility="gone"
                                 customfontdemo:fontName="@string/font_circular_book" />
                             <Spinner
                                 android:id="@+id/tax_type"
                                 android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerInParent="true"
