--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -127,5 +127,6 @@
     (12:38:20) <color name="greyed_out">#c7c7c7</color>
     <color name="greyed_lite">#d9d9d9</color>
     <color name="greyed_lite_transparent">#b36c6b6b</color>
+    <color name="assessment_bg">#CFF3F3</color>
 </resources>
 
